--- a/SiwBooks/src/main/resources/static/toDO.txt
+++ b/SiwBooks/src/main/resources/static/toDO.txt
@@ -1,1 +1,5 @@
+-aggiungere pagina autori
+-aggiungere foto autori-aggiungere pagina recensioni
+-attivare la ricerca
+-aggiungere funzionalità admin
 
