--- a/SiwBooks/src/main/resources/static/toDO.txt
+++ b/SiwBooks/src/main/resources/static/toDO.txt
@@ -1,5 +1,7 @@
--aggiungere pagina autori
--aggiungere foto autori-aggiungere pagina recensioni
--attivare la ricerca
--aggiungere funzionalità admin
-
+CRUCIALI: -aggiungere funzionalità admin
+DA FARE: -aggiungere più elementi pre-esistenti
+         -doppieRecensioni da fixare
+IN più: -ricerca libro 
+        -ordina libri per recensioni
+        -ordina autori per recensioni
+        -sezione top 3 libri recensiti
