--- a/SiwBooks/src/main/resources/static/toDO.txt
+++ b/SiwBooks/src/main/resources/static/toDO.txt
@@ -1,4 +1,4 @@
-CRUCIALI: -aggiungere funzionalità admin -> 
+CRUCIALI: 
 Gli amministratori possono aggiungere, modificare, cancellare libri e autori. 
 Gli amministratori possono anche cancellare le recensioni (ma non possono modificarle)
 
@@ -7,8 +7,9 @@ I LIBRI SI DEVONO VEDERE ANCHE SE CANCELLO GLI AUTORI?
 
 DA FARE:-risolvi nuovo autore
         -modifica
-        -admin non deve tornare alla vera home
-        -controllo che gli altri non vadano in admin
+        -admin non deve tornare alla vera home (ci passsa solo se clicca un libro/autore)
+        -sistema bottone logout
+        -controllo che gli altri non vadano in admin -> gli da errore (mettiamo pagina senza permesso)
         -aggiungere più elementi pre-esistenti
 IN più: -ricerca libro 
         -ordina libri per recensioni
