--- a/SiwBooks/src/main/resources/static/toDO.txt
+++ b/SiwBooks/src/main/resources/static/toDO.txt
@@ -1,4 +1,4 @@
-DA FARE:
+DA FARE:-aggiungi foto in modifica libro
         -admin non deve tornare alla vera home (ci passa solo se clicca un libro/autore)
         -aggiungere più elementi pre-esistenti (soprattutto più foto dei libri)
 IN più: -ricerca libro 
